# portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO  cloudmigrate.yaml  db_old.sqlite3  etoro-account-statement.xlsx  orm.py  orm_test.py  pyproject.toml  requirements.txt  start.sh
asyncwait/: urls.py  views.py
crypto/: apps.py  urls.py  views.py
crypto/static/crypto/: cryptos.js  style.css
crypto/templates/crypto/: crypto.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: CalendarPNL.js  DailyPNL.js  Loading.js  MostTraded.js  Stats.js  TopLoss.js  TopWin.js  TotalPNL.js
frontend/src/utils/: Config.js  buttonOptions.js  useWindowDimensions.js
home/: urls.py  views.py
home/templates/home/: home.html  navbar.html
portfolio/: settings.py  urls.py
static/: asyncwait.js  asyncwait_old.js  crypto.js  cryptoss.js  home.css  index.js  time_switch.mjs  trade_perf.js
templates/: about.html  asyncwait.html  asyncwait_old.html  contact.html  crypto.html  home.html  home1.html  old.html  resume.html  trade_perf.html
trade_perf/: apps.py  etoro-account-statement.xlsx  models.py  plots.py  pnl_data.py  urls.py  views.py  views_plotly_py.py
trade_perf/assets/: bg.css  custom.css
trade_perf/management/commands/: getdata.py  pnl_data.py  pnl_etoro.py
trade_perf/migrations/: 0001_initial.py  0002_alter_pricedata_pnl.py
trade_perf/static/trade_perf/: style.css  styles.css  styless.css  tests.js  trade_perf.js  trade_perf_old1.js  (+2 more)
(+3 files in other folders)
