[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Christian Loer T. Llemit <loerllemit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
pandas = "^1.5.2"
black = "^22.12.0"
SQLAlchemy = "^1.4.45"
openpyxl = "^3.0.10"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
